--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development":{
         "PORT":3000,
-        "MONGODB_URI" : "mongodb://kumol:kumol254@ds147566.mlab.com:47566/ecommerse",
+        "MONGODB_URI" : "mongodb://kumol:kumol254@ds147436.mlab.com:47436/chat",
         "JWT_SECRET" : "secret"
     },
     "porduction":{
